@@ -1,3 +1,5 @@
+2005/12/20 -- released version 20051220_trunk
+
 2005/12/19 -- released version 20051219_trunk
 
 2005/12/18 -- released version 20051218_trunk
